v0.6.0-unreleased
  - Resolve complicated dependency issues
  - Resolve change of function return type (if function can be dropped)
v0.5.0
  - Adds proper deletion of obsolete functions
  - Changes to no data deletion as default for upgrades
v0.4.1
  - First release used in production